--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -1,8 +1,8 @@
 // Importação no topo do arquivo (FORA de qualquer bloco)
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+NZ+Guides&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+NZ+Guides&family=Playwrite+US+Trad+Guides&family=Zalando+Sans:ital,wdth,wght@0,75..125,200..900;1,75..125,200..900&display=swap');
 
 body {
-  font-family: "Playwrite NZ Guides", cursive;
+  font-family: "Playwrite US Trad Guides", cursive;
   font-weight: 400;
   font-style: normal;
 }
