tentativa de mudar a fonte novamente

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -1,3 +1,2 @@
-body {
-  font-family: Arial, sans-serif;
-}
+$font-family-base: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+$font-family-mono: 'Fira Code', 'Consolas', monospace;
