--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
-$font-family-base: 'Roboto', -apple-system, BlinkMacSystemFont, sans-serif;
+//$font-family-base: 'Roboto', -apple-system, BlinkMacSystemFont, sans-serif;
 
-body {
-  font-family: $font-family-base;
-}
+//body {
+//  font-family: $font-family-base;
+//}
