--- a/src/site/feed.njk
+++ b/src/site/feed.njk
@@ -4,7 +4,8 @@
   "eleventyExcludeFromCollections": true
 }
 ---
-{%if meta.siteBaseUrl %}<?xml version="1.0" encoding="utf-8"?>
+{%if meta.siteBaseUrl %}
+<?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ meta.siteBaseUrl }}">
     <title>{{ meta.siteName}}</title>
     <link href="{{ meta.siteBaseUrl }}{{ permalink }}" rel="self" />
@@ -13,16 +14,10 @@
     <id>{{ meta.siteBaseUrl }}</id>
     {%- for note in collections.note | reverse %}
         <entry>
-            <title>
-                {% if note.title %}{{ note.title }}
-                {% else %}{{ note.fileSlug }}
-                {% endif %}
-            </title>
+            <title>{% if note.title %}{{ note.title }}{% else %}{{ note.fileSlug }}{% endif %}</title>
             <updated>{%if note.data.updated %}{{ note.data.updated | dateToZulu }}{%else%}{{ note.date | dateToRfc3339 }}{%endif%}</updated>
             <id>{{ meta.siteBaseUrl }}{{note.url | url }}</id>
-            <content type="html">
-                {{ note.templateContent | hideDataview | taggify | link | htmlToAbsoluteUrls(meta.siteBaseUrl) }}
-            </content>
+            <content type="html"><![CDATA[{{ note.templateContent | hideDataview | taggify | link | htmlToAbsoluteUrls(meta.siteBaseUrl) }}]]></content>
             <link href="{{ meta.siteBaseUrl }}{{note.url | url }}" />
         </entry>
     {%- endfor %}
