--- a/src/site/feed.njk
+++ b/src/site/feed.njk
@@ -1,10 +1,7 @@
----json
-{
-  "permalink": "/feed.xml",
-  "eleventyExcludeFromCollections": true
-}
+---yaml
+permalink: /feed.xml
+eleventyExcludeFromCollections: true
 ---
-{%if meta.siteBaseUrl %}
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ meta.siteBaseUrl }}">
     <title>{{ meta.siteName}}</title>
